# indicators

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  create-pr.yml  publish.yml  pylint.yml  release.yml
contigion-indicators/: bollinger_bands.py  indicator_utils.py  macd.py  parabolic_sar.py  rsi.py  sma.py  supertrend.py
contigion-indicators/util/: functions.py  metatrader.py
contigion_indicators/: __init__.py  bollinger_bands.py  candlestick_patterns.py  macd.py  parabolic_sar.py  rsi.py  sma.py  supertrend.py  support_and_resistance.py
contigion_indicators/util/: candle_info.py  functions.py  metatrader.py
tests/: setup.py  test_bollinger_bands.py  test_macd.py  test_parabolic_sar.py  test_rsi.py  test_sma.py  test_supertrend.py
tests/resources/: data.csv
