[tool.poetry]
name = "contigion-indicators"
version = "0.0.1"
description = "A library for using forex indicators in the Contigion projects"
authors = ["Contigion"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"