[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "indicators"
version = "0.0.0"  # This will be dynamically updated
description = "A library for using forex indicators in the Contigion projects"
authors = [
    { name = "Contigion", email = "" }
]
readme = "README.md"
dependencies = [
    "numpy>=1.21.0", # Add your dependencies here
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["indicators"]